# zac-sender

scripts/yumekin/: begin.sh  break.sh  finish.sh  lunch.sh  report.sh  resume.sh
server/: .gitignore  pyproject.toml
server/src/server/: .gitignore  yumekin.py
