[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "YumNumm", email = "onory0917@gmail.com" }
]
dependencies = [
    "selenium>=4.16.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
